infrastructure/configs/auth/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeflow-dex-http
  namespace: auth
spec:
  parentRefs:
    - name: luzero-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "kubeflow.luzero.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dex
      backendRefs:
        - name: dex
          port: 5556
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeflow-dex-https
  namespace: auth
spec:
  parentRefs:
    - name: luzero-gateway
      namespace: istio-system
      sectionName: https
  hostnames:
    - "kubeflow.luzero.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dex
      backendRefs:
        - name: dex
          port: 5556
